@@ -32,6 +32,7 @@ Version 0.7.0
 - Xyphos items database now used by default for AO. Please report issues at http://www.xyphos.com/viewforum.php?f=7
 - Added waypoint support to rally
 - Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use
+- Added a new setting: tools connect_timeout to allow the get_site function timeout to be adjusted.
 
 API Changes:
 - Moved aochat event handling out of Main.php and in to AOChat.php
@@ -41,6 +42,8 @@ API Changes:
 - Added sixth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
 - chatcmd() now allows / as $origin parameter and will not prefix the chatcmd in any way.
 - Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.
+- Removed one optional parameter from get_site leaving the parameters now as: url, $strip_headers = FALSE, $read_timeout = FALSE.
+  Only $url is a required parameter.
 
 New Modules:
 - Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status
